parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> s
Rule 1     s -> game
Rule 2     game -> metadata mov_1 result game
Rule 3     game -> empty
Rule 4     metadata -> LBRACKET comm_fill_1 RBRACKET metadata
Rule 5     metadata -> empty
Rule 6     mov_1 -> sep_1 MOVEMENT comment_0 mov_2
Rule 7     mov_1 -> empty
Rule 8     sep_1 -> DOTS
Rule 9     sep_1 -> TDOTS
Rule 10    comment_0 -> comment_1
Rule 11    comment_0 -> empty
Rule 12    comment_1 -> LPAREN comm_fill_1 RPAREN
Rule 13    comment_1 -> LKEY comm_fill_1 RKEY
Rule 14    mov_2 -> MOVEMENT comment_0 mov_1
Rule 15    mov_2 -> empty
Rule 16    comm_fill_1 -> tok comm_fill_1
Rule 17    comm_fill_1 -> comment_1 comm_fill_1
Rule 18    comm_fill_1 -> empty
Rule 19    tok -> ID
Rule 20    tok -> MOVEMENT
Rule 21    tok -> sep_1
Rule 22    result -> RESULT
Rule 23    result -> empty
Rule 24    empty -> <empty>

Terminals, with rules where they appear

DOTS                 : 8
ID                   : 19
LBRACKET             : 4
LKEY                 : 13
LPAREN               : 12
MOVEMENT             : 6 14 20
RBRACKET             : 4
RESULT               : 22
RKEY                 : 13
RPAREN               : 12
TDOTS                : 9
error                : 

Nonterminals, with rules where they appear

comm_fill_1          : 4 12 13 16 17
comment_0            : 6 14
comment_1            : 10 17
empty                : 3 5 7 11 15 18 23
game                 : 1 2
metadata             : 2 4
mov_1                : 2 14
mov_2                : 6
result               : 2
s                    : 0
sep_1                : 6 21
tok                  : 16

Parsing method: LALR

state 0

    (0) S' -> . s
    (1) s -> . game
    (2) game -> . metadata mov_1 result game
    (3) game -> . empty
    (4) metadata -> . LBRACKET comm_fill_1 RBRACKET metadata
    (5) metadata -> . empty
    (24) empty -> .

  ! shift/reduce conflict for LBRACKET resolved as shift
    LBRACKET        shift and go to state 5
    $end            reduce using rule 24 (empty -> .)
    DOTS            reduce using rule 24 (empty -> .)
    TDOTS           reduce using rule 24 (empty -> .)
    RESULT          reduce using rule 24 (empty -> .)

  ! LBRACKET        [ reduce using rule 24 (empty -> .) ]

    s                              shift and go to state 1
    game                           shift and go to state 2
    metadata                       shift and go to state 3
    empty                          shift and go to state 4

state 1

    (0) S' -> s .



state 2

    (1) s -> game .

    $end            reduce using rule 1 (s -> game .)


state 3

    (2) game -> metadata . mov_1 result game
    (6) mov_1 -> . sep_1 MOVEMENT comment_0 mov_2
    (7) mov_1 -> . empty
    (8) sep_1 -> . DOTS
    (9) sep_1 -> . TDOTS
    (24) empty -> .

  ! shift/reduce conflict for DOTS resolved as shift
  ! shift/reduce conflict for TDOTS resolved as shift
    DOTS            shift and go to state 9
    TDOTS           shift and go to state 10
    RESULT          reduce using rule 24 (empty -> .)
    LBRACKET        reduce using rule 24 (empty -> .)
    $end            reduce using rule 24 (empty -> .)

  ! DOTS            [ reduce using rule 24 (empty -> .) ]
  ! TDOTS           [ reduce using rule 24 (empty -> .) ]

    mov_1                          shift and go to state 6
    sep_1                          shift and go to state 7
    empty                          shift and go to state 8

state 4

    (3) game -> empty .
    (5) metadata -> empty .

  ! reduce/reduce conflict for $end resolved using rule 3 (game -> empty .)
    $end            reduce using rule 3 (game -> empty .)
    DOTS            reduce using rule 5 (metadata -> empty .)
    TDOTS           reduce using rule 5 (metadata -> empty .)
    RESULT          reduce using rule 5 (metadata -> empty .)
    LBRACKET        reduce using rule 5 (metadata -> empty .)

  ! $end            [ reduce using rule 5 (metadata -> empty .) ]


state 5

    (4) metadata -> LBRACKET . comm_fill_1 RBRACKET metadata
    (16) comm_fill_1 -> . tok comm_fill_1
    (17) comm_fill_1 -> . comment_1 comm_fill_1
    (18) comm_fill_1 -> . empty
    (19) tok -> . ID
    (20) tok -> . MOVEMENT
    (21) tok -> . sep_1
    (12) comment_1 -> . LPAREN comm_fill_1 RPAREN
    (13) comment_1 -> . LKEY comm_fill_1 RKEY
    (24) empty -> .
    (8) sep_1 -> . DOTS
    (9) sep_1 -> . TDOTS

    ID              shift and go to state 15
    MOVEMENT        shift and go to state 16
    LPAREN          shift and go to state 18
    LKEY            shift and go to state 19
    RBRACKET        reduce using rule 24 (empty -> .)
    DOTS            shift and go to state 9
    TDOTS           shift and go to state 10

    comm_fill_1                    shift and go to state 11
    tok                            shift and go to state 12
    comment_1                      shift and go to state 13
    empty                          shift and go to state 14
    sep_1                          shift and go to state 17

state 6

    (2) game -> metadata mov_1 . result game
    (22) result -> . RESULT
    (23) result -> . empty
    (24) empty -> .

  ! shift/reduce conflict for RESULT resolved as shift
    RESULT          shift and go to state 21
    LBRACKET        reduce using rule 24 (empty -> .)
    DOTS            reduce using rule 24 (empty -> .)
    TDOTS           reduce using rule 24 (empty -> .)
    $end            reduce using rule 24 (empty -> .)

  ! RESULT          [ reduce using rule 24 (empty -> .) ]

    result                         shift and go to state 20
    empty                          shift and go to state 22

state 7

    (6) mov_1 -> sep_1 . MOVEMENT comment_0 mov_2

    MOVEMENT        shift and go to state 23


state 8

    (7) mov_1 -> empty .

    RESULT          reduce using rule 7 (mov_1 -> empty .)
    LBRACKET        reduce using rule 7 (mov_1 -> empty .)
    DOTS            reduce using rule 7 (mov_1 -> empty .)
    TDOTS           reduce using rule 7 (mov_1 -> empty .)
    $end            reduce using rule 7 (mov_1 -> empty .)


state 9

    (8) sep_1 -> DOTS .

    MOVEMENT        reduce using rule 8 (sep_1 -> DOTS .)
    ID              reduce using rule 8 (sep_1 -> DOTS .)
    LPAREN          reduce using rule 8 (sep_1 -> DOTS .)
    LKEY            reduce using rule 8 (sep_1 -> DOTS .)
    DOTS            reduce using rule 8 (sep_1 -> DOTS .)
    TDOTS           reduce using rule 8 (sep_1 -> DOTS .)
    RBRACKET        reduce using rule 8 (sep_1 -> DOTS .)
    RPAREN          reduce using rule 8 (sep_1 -> DOTS .)
    RKEY            reduce using rule 8 (sep_1 -> DOTS .)


state 10

    (9) sep_1 -> TDOTS .

    MOVEMENT        reduce using rule 9 (sep_1 -> TDOTS .)
    ID              reduce using rule 9 (sep_1 -> TDOTS .)
    LPAREN          reduce using rule 9 (sep_1 -> TDOTS .)
    LKEY            reduce using rule 9 (sep_1 -> TDOTS .)
    DOTS            reduce using rule 9 (sep_1 -> TDOTS .)
    TDOTS           reduce using rule 9 (sep_1 -> TDOTS .)
    RBRACKET        reduce using rule 9 (sep_1 -> TDOTS .)
    RPAREN          reduce using rule 9 (sep_1 -> TDOTS .)
    RKEY            reduce using rule 9 (sep_1 -> TDOTS .)


state 11

    (4) metadata -> LBRACKET comm_fill_1 . RBRACKET metadata

    RBRACKET        shift and go to state 24


state 12

    (16) comm_fill_1 -> tok . comm_fill_1
    (16) comm_fill_1 -> . tok comm_fill_1
    (17) comm_fill_1 -> . comment_1 comm_fill_1
    (18) comm_fill_1 -> . empty
    (19) tok -> . ID
    (20) tok -> . MOVEMENT
    (21) tok -> . sep_1
    (12) comment_1 -> . LPAREN comm_fill_1 RPAREN
    (13) comment_1 -> . LKEY comm_fill_1 RKEY
    (24) empty -> .
    (8) sep_1 -> . DOTS
    (9) sep_1 -> . TDOTS

    ID              shift and go to state 15
    MOVEMENT        shift and go to state 16
    LPAREN          shift and go to state 18
    LKEY            shift and go to state 19
    RBRACKET        reduce using rule 24 (empty -> .)
    RPAREN          reduce using rule 24 (empty -> .)
    RKEY            reduce using rule 24 (empty -> .)
    DOTS            shift and go to state 9
    TDOTS           shift and go to state 10

    tok                            shift and go to state 12
    comm_fill_1                    shift and go to state 25
    comment_1                      shift and go to state 13
    empty                          shift and go to state 14
    sep_1                          shift and go to state 17

state 13

    (17) comm_fill_1 -> comment_1 . comm_fill_1
    (16) comm_fill_1 -> . tok comm_fill_1
    (17) comm_fill_1 -> . comment_1 comm_fill_1
    (18) comm_fill_1 -> . empty
    (19) tok -> . ID
    (20) tok -> . MOVEMENT
    (21) tok -> . sep_1
    (12) comment_1 -> . LPAREN comm_fill_1 RPAREN
    (13) comment_1 -> . LKEY comm_fill_1 RKEY
    (24) empty -> .
    (8) sep_1 -> . DOTS
    (9) sep_1 -> . TDOTS

    ID              shift and go to state 15
    MOVEMENT        shift and go to state 16
    LPAREN          shift and go to state 18
    LKEY            shift and go to state 19
    RBRACKET        reduce using rule 24 (empty -> .)
    RPAREN          reduce using rule 24 (empty -> .)
    RKEY            reduce using rule 24 (empty -> .)
    DOTS            shift and go to state 9
    TDOTS           shift and go to state 10

    comment_1                      shift and go to state 13
    comm_fill_1                    shift and go to state 26
    tok                            shift and go to state 12
    empty                          shift and go to state 14
    sep_1                          shift and go to state 17

state 14

    (18) comm_fill_1 -> empty .

    RBRACKET        reduce using rule 18 (comm_fill_1 -> empty .)
    RPAREN          reduce using rule 18 (comm_fill_1 -> empty .)
    RKEY            reduce using rule 18 (comm_fill_1 -> empty .)


state 15

    (19) tok -> ID .

    ID              reduce using rule 19 (tok -> ID .)
    MOVEMENT        reduce using rule 19 (tok -> ID .)
    LPAREN          reduce using rule 19 (tok -> ID .)
    LKEY            reduce using rule 19 (tok -> ID .)
    DOTS            reduce using rule 19 (tok -> ID .)
    TDOTS           reduce using rule 19 (tok -> ID .)
    RBRACKET        reduce using rule 19 (tok -> ID .)
    RPAREN          reduce using rule 19 (tok -> ID .)
    RKEY            reduce using rule 19 (tok -> ID .)


state 16

    (20) tok -> MOVEMENT .

    ID              reduce using rule 20 (tok -> MOVEMENT .)
    MOVEMENT        reduce using rule 20 (tok -> MOVEMENT .)
    LPAREN          reduce using rule 20 (tok -> MOVEMENT .)
    LKEY            reduce using rule 20 (tok -> MOVEMENT .)
    DOTS            reduce using rule 20 (tok -> MOVEMENT .)
    TDOTS           reduce using rule 20 (tok -> MOVEMENT .)
    RBRACKET        reduce using rule 20 (tok -> MOVEMENT .)
    RPAREN          reduce using rule 20 (tok -> MOVEMENT .)
    RKEY            reduce using rule 20 (tok -> MOVEMENT .)


state 17

    (21) tok -> sep_1 .

    ID              reduce using rule 21 (tok -> sep_1 .)
    MOVEMENT        reduce using rule 21 (tok -> sep_1 .)
    LPAREN          reduce using rule 21 (tok -> sep_1 .)
    LKEY            reduce using rule 21 (tok -> sep_1 .)
    DOTS            reduce using rule 21 (tok -> sep_1 .)
    TDOTS           reduce using rule 21 (tok -> sep_1 .)
    RBRACKET        reduce using rule 21 (tok -> sep_1 .)
    RPAREN          reduce using rule 21 (tok -> sep_1 .)
    RKEY            reduce using rule 21 (tok -> sep_1 .)


state 18

    (12) comment_1 -> LPAREN . comm_fill_1 RPAREN
    (16) comm_fill_1 -> . tok comm_fill_1
    (17) comm_fill_1 -> . comment_1 comm_fill_1
    (18) comm_fill_1 -> . empty
    (19) tok -> . ID
    (20) tok -> . MOVEMENT
    (21) tok -> . sep_1
    (12) comment_1 -> . LPAREN comm_fill_1 RPAREN
    (13) comment_1 -> . LKEY comm_fill_1 RKEY
    (24) empty -> .
    (8) sep_1 -> . DOTS
    (9) sep_1 -> . TDOTS

    ID              shift and go to state 15
    MOVEMENT        shift and go to state 16
    LPAREN          shift and go to state 18
    LKEY            shift and go to state 19
    RPAREN          reduce using rule 24 (empty -> .)
    DOTS            shift and go to state 9
    TDOTS           shift and go to state 10

    comm_fill_1                    shift and go to state 27
    tok                            shift and go to state 12
    comment_1                      shift and go to state 13
    empty                          shift and go to state 14
    sep_1                          shift and go to state 17

state 19

    (13) comment_1 -> LKEY . comm_fill_1 RKEY
    (16) comm_fill_1 -> . tok comm_fill_1
    (17) comm_fill_1 -> . comment_1 comm_fill_1
    (18) comm_fill_1 -> . empty
    (19) tok -> . ID
    (20) tok -> . MOVEMENT
    (21) tok -> . sep_1
    (12) comment_1 -> . LPAREN comm_fill_1 RPAREN
    (13) comment_1 -> . LKEY comm_fill_1 RKEY
    (24) empty -> .
    (8) sep_1 -> . DOTS
    (9) sep_1 -> . TDOTS

    ID              shift and go to state 15
    MOVEMENT        shift and go to state 16
    LPAREN          shift and go to state 18
    LKEY            shift and go to state 19
    RKEY            reduce using rule 24 (empty -> .)
    DOTS            shift and go to state 9
    TDOTS           shift and go to state 10

    comm_fill_1                    shift and go to state 28
    tok                            shift and go to state 12
    comment_1                      shift and go to state 13
    empty                          shift and go to state 14
    sep_1                          shift and go to state 17

state 20

    (2) game -> metadata mov_1 result . game
    (2) game -> . metadata mov_1 result game
    (3) game -> . empty
    (4) metadata -> . LBRACKET comm_fill_1 RBRACKET metadata
    (5) metadata -> . empty
    (24) empty -> .

  ! shift/reduce conflict for LBRACKET resolved as shift
    LBRACKET        shift and go to state 5
    $end            reduce using rule 24 (empty -> .)
    RESULT          reduce using rule 24 (empty -> .)
    DOTS            reduce using rule 24 (empty -> .)
    TDOTS           reduce using rule 24 (empty -> .)

  ! LBRACKET        [ reduce using rule 24 (empty -> .) ]

    metadata                       shift and go to state 3
    game                           shift and go to state 29
    empty                          shift and go to state 4

state 21

    (22) result -> RESULT .

    RESULT          reduce using rule 22 (result -> RESULT .)
    LBRACKET        reduce using rule 22 (result -> RESULT .)
    DOTS            reduce using rule 22 (result -> RESULT .)
    TDOTS           reduce using rule 22 (result -> RESULT .)
    $end            reduce using rule 22 (result -> RESULT .)


state 22

    (23) result -> empty .

    RESULT          reduce using rule 23 (result -> empty .)
    LBRACKET        reduce using rule 23 (result -> empty .)
    DOTS            reduce using rule 23 (result -> empty .)
    TDOTS           reduce using rule 23 (result -> empty .)
    $end            reduce using rule 23 (result -> empty .)


state 23

    (6) mov_1 -> sep_1 MOVEMENT . comment_0 mov_2
    (10) comment_0 -> . comment_1
    (11) comment_0 -> . empty
    (12) comment_1 -> . LPAREN comm_fill_1 RPAREN
    (13) comment_1 -> . LKEY comm_fill_1 RKEY
    (24) empty -> .

    LPAREN          shift and go to state 18
    LKEY            shift and go to state 19
    MOVEMENT        reduce using rule 24 (empty -> .)
    RESULT          reduce using rule 24 (empty -> .)
    LBRACKET        reduce using rule 24 (empty -> .)
    DOTS            reduce using rule 24 (empty -> .)
    TDOTS           reduce using rule 24 (empty -> .)
    $end            reduce using rule 24 (empty -> .)

    comment_0                      shift and go to state 30
    comment_1                      shift and go to state 31
    empty                          shift and go to state 32

state 24

    (4) metadata -> LBRACKET comm_fill_1 RBRACKET . metadata
    (4) metadata -> . LBRACKET comm_fill_1 RBRACKET metadata
    (5) metadata -> . empty
    (24) empty -> .

  ! shift/reduce conflict for LBRACKET resolved as shift
    LBRACKET        shift and go to state 5
    DOTS            reduce using rule 24 (empty -> .)
    TDOTS           reduce using rule 24 (empty -> .)
    RESULT          reduce using rule 24 (empty -> .)
    $end            reduce using rule 24 (empty -> .)

  ! LBRACKET        [ reduce using rule 24 (empty -> .) ]

    metadata                       shift and go to state 33
    empty                          shift and go to state 34

state 25

    (16) comm_fill_1 -> tok comm_fill_1 .

    RBRACKET        reduce using rule 16 (comm_fill_1 -> tok comm_fill_1 .)
    RPAREN          reduce using rule 16 (comm_fill_1 -> tok comm_fill_1 .)
    RKEY            reduce using rule 16 (comm_fill_1 -> tok comm_fill_1 .)


state 26

    (17) comm_fill_1 -> comment_1 comm_fill_1 .

    RBRACKET        reduce using rule 17 (comm_fill_1 -> comment_1 comm_fill_1 .)
    RPAREN          reduce using rule 17 (comm_fill_1 -> comment_1 comm_fill_1 .)
    RKEY            reduce using rule 17 (comm_fill_1 -> comment_1 comm_fill_1 .)


state 27

    (12) comment_1 -> LPAREN comm_fill_1 . RPAREN

    RPAREN          shift and go to state 35


state 28

    (13) comment_1 -> LKEY comm_fill_1 . RKEY

    RKEY            shift and go to state 36


state 29

    (2) game -> metadata mov_1 result game .

    $end            reduce using rule 2 (game -> metadata mov_1 result game .)


state 30

    (6) mov_1 -> sep_1 MOVEMENT comment_0 . mov_2
    (14) mov_2 -> . MOVEMENT comment_0 mov_1
    (15) mov_2 -> . empty
    (24) empty -> .

    MOVEMENT        shift and go to state 37
    RESULT          reduce using rule 24 (empty -> .)
    LBRACKET        reduce using rule 24 (empty -> .)
    DOTS            reduce using rule 24 (empty -> .)
    TDOTS           reduce using rule 24 (empty -> .)
    $end            reduce using rule 24 (empty -> .)

    mov_2                          shift and go to state 38
    empty                          shift and go to state 39

state 31

    (10) comment_0 -> comment_1 .

    MOVEMENT        reduce using rule 10 (comment_0 -> comment_1 .)
    RESULT          reduce using rule 10 (comment_0 -> comment_1 .)
    LBRACKET        reduce using rule 10 (comment_0 -> comment_1 .)
    DOTS            reduce using rule 10 (comment_0 -> comment_1 .)
    TDOTS           reduce using rule 10 (comment_0 -> comment_1 .)
    $end            reduce using rule 10 (comment_0 -> comment_1 .)


state 32

    (11) comment_0 -> empty .

    MOVEMENT        reduce using rule 11 (comment_0 -> empty .)
    RESULT          reduce using rule 11 (comment_0 -> empty .)
    LBRACKET        reduce using rule 11 (comment_0 -> empty .)
    DOTS            reduce using rule 11 (comment_0 -> empty .)
    TDOTS           reduce using rule 11 (comment_0 -> empty .)
    $end            reduce using rule 11 (comment_0 -> empty .)


state 33

    (4) metadata -> LBRACKET comm_fill_1 RBRACKET metadata .

    DOTS            reduce using rule 4 (metadata -> LBRACKET comm_fill_1 RBRACKET metadata .)
    TDOTS           reduce using rule 4 (metadata -> LBRACKET comm_fill_1 RBRACKET metadata .)
    RESULT          reduce using rule 4 (metadata -> LBRACKET comm_fill_1 RBRACKET metadata .)
    LBRACKET        reduce using rule 4 (metadata -> LBRACKET comm_fill_1 RBRACKET metadata .)
    $end            reduce using rule 4 (metadata -> LBRACKET comm_fill_1 RBRACKET metadata .)


state 34

    (5) metadata -> empty .

    DOTS            reduce using rule 5 (metadata -> empty .)
    TDOTS           reduce using rule 5 (metadata -> empty .)
    RESULT          reduce using rule 5 (metadata -> empty .)
    LBRACKET        reduce using rule 5 (metadata -> empty .)
    $end            reduce using rule 5 (metadata -> empty .)


state 35

    (12) comment_1 -> LPAREN comm_fill_1 RPAREN .

    ID              reduce using rule 12 (comment_1 -> LPAREN comm_fill_1 RPAREN .)
    MOVEMENT        reduce using rule 12 (comment_1 -> LPAREN comm_fill_1 RPAREN .)
    LPAREN          reduce using rule 12 (comment_1 -> LPAREN comm_fill_1 RPAREN .)
    LKEY            reduce using rule 12 (comment_1 -> LPAREN comm_fill_1 RPAREN .)
    DOTS            reduce using rule 12 (comment_1 -> LPAREN comm_fill_1 RPAREN .)
    TDOTS           reduce using rule 12 (comment_1 -> LPAREN comm_fill_1 RPAREN .)
    RBRACKET        reduce using rule 12 (comment_1 -> LPAREN comm_fill_1 RPAREN .)
    RPAREN          reduce using rule 12 (comment_1 -> LPAREN comm_fill_1 RPAREN .)
    RKEY            reduce using rule 12 (comment_1 -> LPAREN comm_fill_1 RPAREN .)
    RESULT          reduce using rule 12 (comment_1 -> LPAREN comm_fill_1 RPAREN .)
    LBRACKET        reduce using rule 12 (comment_1 -> LPAREN comm_fill_1 RPAREN .)
    $end            reduce using rule 12 (comment_1 -> LPAREN comm_fill_1 RPAREN .)


state 36

    (13) comment_1 -> LKEY comm_fill_1 RKEY .

    ID              reduce using rule 13 (comment_1 -> LKEY comm_fill_1 RKEY .)
    MOVEMENT        reduce using rule 13 (comment_1 -> LKEY comm_fill_1 RKEY .)
    LPAREN          reduce using rule 13 (comment_1 -> LKEY comm_fill_1 RKEY .)
    LKEY            reduce using rule 13 (comment_1 -> LKEY comm_fill_1 RKEY .)
    DOTS            reduce using rule 13 (comment_1 -> LKEY comm_fill_1 RKEY .)
    TDOTS           reduce using rule 13 (comment_1 -> LKEY comm_fill_1 RKEY .)
    RBRACKET        reduce using rule 13 (comment_1 -> LKEY comm_fill_1 RKEY .)
    RPAREN          reduce using rule 13 (comment_1 -> LKEY comm_fill_1 RKEY .)
    RKEY            reduce using rule 13 (comment_1 -> LKEY comm_fill_1 RKEY .)
    RESULT          reduce using rule 13 (comment_1 -> LKEY comm_fill_1 RKEY .)
    LBRACKET        reduce using rule 13 (comment_1 -> LKEY comm_fill_1 RKEY .)
    $end            reduce using rule 13 (comment_1 -> LKEY comm_fill_1 RKEY .)


state 37

    (14) mov_2 -> MOVEMENT . comment_0 mov_1
    (10) comment_0 -> . comment_1
    (11) comment_0 -> . empty
    (12) comment_1 -> . LPAREN comm_fill_1 RPAREN
    (13) comment_1 -> . LKEY comm_fill_1 RKEY
    (24) empty -> .

    LPAREN          shift and go to state 18
    LKEY            shift and go to state 19
    DOTS            reduce using rule 24 (empty -> .)
    TDOTS           reduce using rule 24 (empty -> .)
    RESULT          reduce using rule 24 (empty -> .)
    LBRACKET        reduce using rule 24 (empty -> .)
    $end            reduce using rule 24 (empty -> .)

    comment_0                      shift and go to state 40
    comment_1                      shift and go to state 31
    empty                          shift and go to state 32

state 38

    (6) mov_1 -> sep_1 MOVEMENT comment_0 mov_2 .

    RESULT          reduce using rule 6 (mov_1 -> sep_1 MOVEMENT comment_0 mov_2 .)
    LBRACKET        reduce using rule 6 (mov_1 -> sep_1 MOVEMENT comment_0 mov_2 .)
    DOTS            reduce using rule 6 (mov_1 -> sep_1 MOVEMENT comment_0 mov_2 .)
    TDOTS           reduce using rule 6 (mov_1 -> sep_1 MOVEMENT comment_0 mov_2 .)
    $end            reduce using rule 6 (mov_1 -> sep_1 MOVEMENT comment_0 mov_2 .)


state 39

    (15) mov_2 -> empty .

    RESULT          reduce using rule 15 (mov_2 -> empty .)
    LBRACKET        reduce using rule 15 (mov_2 -> empty .)
    DOTS            reduce using rule 15 (mov_2 -> empty .)
    TDOTS           reduce using rule 15 (mov_2 -> empty .)
    $end            reduce using rule 15 (mov_2 -> empty .)


state 40

    (14) mov_2 -> MOVEMENT comment_0 . mov_1
    (6) mov_1 -> . sep_1 MOVEMENT comment_0 mov_2
    (7) mov_1 -> . empty
    (8) sep_1 -> . DOTS
    (9) sep_1 -> . TDOTS
    (24) empty -> .

  ! shift/reduce conflict for DOTS resolved as shift
  ! shift/reduce conflict for TDOTS resolved as shift
    DOTS            shift and go to state 9
    TDOTS           shift and go to state 10
    RESULT          reduce using rule 24 (empty -> .)
    LBRACKET        reduce using rule 24 (empty -> .)
    $end            reduce using rule 24 (empty -> .)

  ! DOTS            [ reduce using rule 24 (empty -> .) ]
  ! TDOTS           [ reduce using rule 24 (empty -> .) ]

    mov_1                          shift and go to state 41
    sep_1                          shift and go to state 7
    empty                          shift and go to state 8

state 41

    (14) mov_2 -> MOVEMENT comment_0 mov_1 .

    RESULT          reduce using rule 14 (mov_2 -> MOVEMENT comment_0 mov_1 .)
    LBRACKET        reduce using rule 14 (mov_2 -> MOVEMENT comment_0 mov_1 .)
    DOTS            reduce using rule 14 (mov_2 -> MOVEMENT comment_0 mov_1 .)
    TDOTS           reduce using rule 14 (mov_2 -> MOVEMENT comment_0 mov_1 .)
    $end            reduce using rule 14 (mov_2 -> MOVEMENT comment_0 mov_1 .)

WARNING: 
WARNING: Conflicts:
WARNING: 
WARNING: shift/reduce conflict for LBRACKET in state 0 resolved as shift
WARNING: shift/reduce conflict for DOTS in state 3 resolved as shift
WARNING: shift/reduce conflict for TDOTS in state 3 resolved as shift
WARNING: shift/reduce conflict for RESULT in state 6 resolved as shift
WARNING: shift/reduce conflict for LBRACKET in state 20 resolved as shift
WARNING: shift/reduce conflict for LBRACKET in state 24 resolved as shift
WARNING: shift/reduce conflict for DOTS in state 40 resolved as shift
WARNING: shift/reduce conflict for TDOTS in state 40 resolved as shift
WARNING: reduce/reduce conflict in state 4 resolved using rule (game -> empty)
WARNING: rejected rule (metadata -> empty) in state 4
